# CheckersPy

./: LICENCE  README.md  main.py  pyproject.toml  setup.py
checkers_game/: board.py  constants.py  match.py
checkers_game/_parts/: __init__.py  piece.py
